--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,22 +46,26 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@storybook/test": "^8.0.4",
+    "@t3-oss/env-nextjs": "^0.9.2",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/flags": "2.2.1",
     "@vercel/speed-insights": "^1.0.10",
     "@vercel/toolbar": "0.1.10",
     "ai": "^3.1.15",
+    "autoprefixer": "^10.4.19",
     "bloom-filters": "^3.0.1",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.0",
     "meilisearch": "^0.38.0",
+    "mysql2": "^3.11.5",
     "next": "14.2.3",
     "next-compose-plugins": "^2.2.1",
     "nuqs": "^1.17.1",
     "p-retry": "^6.2.0",
     "playwright": "^1.42.1",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
@@ -69,10 +73,7 @@
     "schema-dts": "^1.1.2",
     "sharp": "0.32.6",
     "sonner": "^1.4.41",
-    "zustand": "^4.5.2",
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@enterprise-commerce/eslint-config-custom": "*",
@@ -86,12 +87,12 @@
     "@storybook/nextjs": "^8.0.4",
     "@storybook/react": "^8.0.4",
     "@storybook/test-runner": "^0.17.0",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@testing-library/dom": "^10.3.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
-    "@testing-library/dom": "^10.3.2",
     "@testing-library/user-event": "14.5.2",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "storybook": "^8.0.4"
   }
 }
